salesforce-deployment/force-app/main/default/objects/Demo_tab__c/Demo_tab__c.object-meta.xml
<CustomObject>
    <label>Demo_tab</label>
    <nameField>
        <label>Demo_tab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo_tabs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>