salesforce-deployment/force-app/main/default/objects/Demo_tab__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo_tabs</relationshipLabel>
    <relationshipName>Demo_tabs</relationshipName>
    <type>Lookup</type>
</CustomField>