salesforce-deployment/force-app/main/default/objects/Demo_tab__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demo_tabs</relationshipName>
    <type>Lookup</type>
</CustomField>