salesforce-deployment/force-app/main/default/objects/Demo_tab__c/fields/Picklist_field__c.field-meta.xml
<CustomField>
    <fullName>Picklist_field__c</fullName>
    <label>Picklist field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit primary</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Visit Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>